--- a/SiMP3/Views/AndroidMainPage.xaml
+++ b/SiMP3/Views/AndroidMainPage.xaml
@@ -143,12 +143,9 @@
                     <CollectionView.ItemTemplate>
                         <DataTemplate x:DataType="models:TrackModel">
                             <Border
-                                BackgroundColor="{StaticResource CardColor}"
-                                Stroke="{StaticResource BorderColor}"
-                                StrokeThickness="1"
+                                Style="{StaticResource TrackCardStyle}"
                                 Padding="12"
-                                HeightRequest="80"
-                                StrokeShape="RoundRectangle 16">
+                                HeightRequest="80">
                                 <Grid ColumnDefinitions="Auto,*,Auto" ColumnSpacing="12" VerticalOptions="Center">
                                     <Border
                                         WidthRequest="56"
@@ -181,23 +178,6 @@
                                         VerticalOptions="Center"
                                         HorizontalOptions="End" />
                                 </Grid>
-
-                                <VisualStateManager.VisualStateGroups>
-                                    <VisualStateGroup Name="CommonStates">
-                                        <VisualState Name="Normal">
-                                            <VisualState.Setters>
-                                                <Setter Property="BackgroundColor" Value="{StaticResource CardColor}" />
-                                                <Setter Property="Stroke" Value="{StaticResource BorderColor}" />
-                                            </VisualState.Setters>
-                                        </VisualState>
-                                        <VisualState Name="Selected">
-                                            <VisualState.Setters>
-                                                <Setter Property="BackgroundColor" Value="#191C2A" />
-                                                <Setter Property="Stroke" Value="{StaticResource AccentColor}" />
-                                            </VisualState.Setters>
-                                        </VisualState>
-                                    </VisualStateGroup>
-                                </VisualStateManager.VisualStateGroups>
                             </Border>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
